src/app/components/data-table/data-table.component.scss
#data-table{
  width: auto;
  min-width: 60%;
  max-width: 100%;
  margin: 0 auto;
  overflow-x: auto;
  // display: inline-block;
  tr th{
    vertical-align: middle;
    .btn{
      padding: 2px;
    }
  }
  tr td{
    min-width: 100px;
  }
}
#data-table-wrapper {
  text-align: center;
  overflow-x: auto;
}

th.delete, td.delete{
  width: 1em;
  background: transparent;
  i{
    visibility: hidden;
  }
}
tr:hover i{
  visibility: visible;
  cursor: pointer;
}
tr:hover .delete i:hover{
  color: #dc3545;
}
.selector{
  width: 1em;
}
.selector input{
  visibility: hidden;
}
tr:hover .selector input{
  visibility: visible;
}
.selector input:checked{
  visibility: visible;
}

#addColumnBtn{
  border-radius: 100%;
  line-height: 1.25rem;
}
#editColSave{
  border-radius: 100%;
  line-height: 1.5rem;
}

#insertRow td{
  vertical-align: middle;
}
.pagination{
  margin-top: 1rem;
}

#resetClassification{
  margin-top: 1rem;
}

#sendClassification{
  margin-top: 1rem;
}

#showDecisionTree{
  margin-top: 1rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

#treeInformation{
  margin-bottom: 0.5rem;
}

#showSQL{
  margin-top: 1rem;
  margin-right: 0.25rem;
}

#startClassification{
  margin-top: 1rem;
  margin-left: 0.25rem;
}

#modal-body-SQL{
  max-width: 600px !important;
  width: 600px !important;
}

/*
see:
https://stackoverflow.com/questions/38773538/css-table-loading-overlay-for-tbody
respectively
https://plnkr.co/edit/qOwmd9xJvwYdJ37wsKWX?p=preview
*/
table thead,
table tbody {
  width: 100%;
}

table.loading {
  position: relative;
  border: none;
}
/* ... */

